Fix CSS syntax in BoasVindas.html
Removi os sinais de maior/menor para que o "body" pudesse ter a letra aumentada para 20 pt

--- a/BoasVindas.html
+++ b/BoasVindas.html
@@ -6,11 +6,10 @@
     <meta http-equiv"X-UA-Compatible" content "ie=edge">
     <title>Document</title>
     <style> 
-    <body> {
-        font: normal 20pt Arial 
-    }
+        body {
+            font: normal 20pt Arial 
+        }
         
-    </body>
     </style>
    
 </head>
